--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "zsh/plugins/zsh-git-prompt"]
-	path = zsh/plugins/zsh-git-prompt
-	url = https://github.com/jamesiain/zsh-git-prompt.git
-[submodule "zsh/plugins/diff-so-fancy"]
-	path = zsh/plugins/diff-so-fancy
-	url = https://github.com/so-fancy/diff-so-fancy.git
+[submodule "tmux/plugins/tpm"]
+	path = tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
